# stasys

./: Cargo.toml  README.md
.github/workflows/: release.yml
examples/: stasys.rune
examples/profiles/: gaming.rune  presentation.rune  work.rune
src/: cli.rs  client.rs  daemon.rs  log.rs  main.rs
src/config/: bootstrap.rs  info.rs  mod.rs  model.rs  parser.rs
src/core/: utils.rs
src/core/events/: handlers.rs
src/core/manager/: actions.rs  helpers.rs  idle_loops.rs  mod.rs  state.rs
src/core/services/: app_inhibit.rs  browser_media.rs  dbus.rs  input.rs  media.rs  power_detection.rs
src/ipc/: commands.rs  mod.rs  pause.rs
systemd/: stasys.service
