[package]
name = "stasys"
version = "0.7.6"
edition = "2024"
authors = ["Dustin Pilgrim <dustin.pilgrim1997@gmail.com>", "Alanon202 (fork maintainer)"]
description = "A simple yet powerful lightweight Wayland idle manager written in Rust. (STABLE FORK using v0.7.0 as a base)"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Alanon202/stasys"
keywords = ["wayland", "idle", "manager", "rust", "linux"]
categories = ["command-line-utilities", "os::linux-apis"]
exclude = ["/.github", "/target", "/.idea", "/.vscode", "Cargo.lock"]

[profile.dev]
opt-level = 2

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Single compilation unit for better optimization
panic = "abort"     # Remove stack unwinding code
strip = true        # Remove debug symbols

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
ctrlc = "3.5.1"
dirs = "6.0.0"
eyre = "0.6.12"
futures-util = "0.3.31"
input = "0.9.1"
libc = "0.2.177"
once_cell = "1.21.3"
procfs = { version = "0.18.0", default-features = false }
regex-lite = "0.1.6"
rune-cfg = "0.1.33"
serde_json = "1.0.145"
signal-hook = "0.3.18"
time = { version = "0.3.37", features = ["formatting", "local-offset", "macros"] }
tokio = { version = "1.48.0", default-features = false, features = ["rt", "sync", "net", "time", "process", "macros", "io-util", "signal"] }
wayland-client = "0.31.11"
wayland-protocols = { version = "0.32.9", features = ["client", "unstable", "staging"] }
wayland-protocols-wlr = { version = "0.3.9", features = ["client"] }
zbus = { version = "5.12.0", default-features = false, features = ["tokio"] }
zbus_macros = "5.12.0"
zvariant = "5.8.0"
